--- a/ooresults/templates/results_tab_content.html
+++ b/ooresults/templates/results_tab_content.html
@@ -1,5 +1,6 @@
-$def with (results)
- 
+## results: str
+
+
 <!-- Tab content -->
 <div id="Results" class="tabcontent">
   <div class="actions">
@@ -10,7 +11,7 @@ $def with (results)
   </div>
 
   <div id="res.results" class="data">
-    $:results
+    ${results | n}
   </div>
 
   <!-- The Modal -->
