--- a/ooresults/templates/add_club.html
+++ b/ooresults/templates/add_club.html
@@ -1,22 +1,15 @@
-$def with (club)
-
-$if club:
-    $ id = str(club.id)
-    $ name = club.name
-$else:
-    $ id = ""
-    $ name = ""
+## club: ClubType
 
 
 <!-- Modal content -->
 <div class="modal-content">
     <span class="close" onclick="document.getElementById('clb.addDialog').style.display='none'">&times;</span>
     <form id="clb.formAdd" class="form-container" autocomplete="off" onsubmit="clb_submitAdd(); return false;">
-        <input id="clb.addId" name="id" type="text" value="$id" hidden/>
+        <input id="clb.addId" name="id" type="text" value="${club.id if club else None}" hidden/>
         <table id="clb.addFormTable">
             <tr>
                 <th class="input-header"><label for="clb_name">Name *</label></th>
-                <td><input id="clb_name" name="name" type="text" value="$name" required oninput="mark_label(this)"/></td>
+                <td><input id="clb_name" name="name" type="text" value="${club.name if club else ''}" required oninput="mark_label(this)"/></td>
             </tr>
         </table>
         <p></p>
