--- a/ooresults/templates/entries_table.html
+++ b/ooresults/templates/entries_table.html
@@ -1,33 +1,28 @@
-$def with (event, view, view_entries_list)
+## event: EventType
+## view: str
+## view_entries_list: List[Dict[str, List[EntryType]]]
 
 
-$def format_time(time):
-    $if time is not None:
-        $return minutes_seconds(time)
-    $else:
-        $return ''
+<%!
+from ooresults.utils.globals import format_time
+from ooresults.utils.globals import MAP_STATUS
+from ooresults.utils.globals import minutes_seconds
+from ooresults.utils.rental_cards import format_card
 
 
-$def format_date(time):
-    $if time is not None:
-        $return time.strftime('%H:%M:%S')
-    $else:
-        $return ''
-
-
-$def f(value) -> str:
-    $return str(value) if value is not None else ''
+t = {"entries": "Entries", "classes": "Unassigned results", "clubs": "Individuals/No club", "states": "Unassigned results"}
+%>
 
 
 <div id="entr.event">
     <table style="text-align: left">
         <tr>
             <th style="padding-right: 10px">Event name:</th>
-            <td id="entr.event_name">$(event.name if event is not None else '')</td>
+            <td id="entr.event_name">${event.name if event is not None else ""}</td>
         </tr>
         <tr>
             <th style="padding-right: 10px">Event date:</th>
-            <td id="entr.event_date">$(event.date.isoformat() if event is not None else '')</td>
+            <td id="entr.event_date">${event.date.isoformat() if event is not None else ""}</td>
         </tr>
     </table>
 </div>
@@ -37,11 +32,13 @@ $def f(value) -> str:
 <input id="entr.filter" oninput="filter_table('entr.table', 'tr', this.value)" placeholder="Search ...">
 <label for="entr.view">&nbsp;&nbsp;&nbsp;&nbsp;View:&nbsp;&nbsp;</label>
 <select id="entr.view" onchange="entr_reload_view(this)">
-    $for value, text in (('entries', 'Entries'), ('classes', 'Classes'), ('clubs', 'Clubs'), ('states', 'States')):
-        $if view == value:
-            <option value="$value" selected>$text</option>
-        $else:
-            <option value="$str(value)">$text</option>
+    % for value, text in (("entries", "Entries"), ("classes", "Classes"), ("clubs", "Clubs"), ("states", "States")):
+        % if view == value:
+            <option value="${value}" selected>${text}</option>
+        % else:
+            <option value="${value}">${text}</option>
+        % endif
+    % endfor
 </select>
 
 <p/>
@@ -56,46 +53,54 @@ $def f(value) -> str:
                 <th class="dth">Gender</th>
                 <th class="dth">Year</th>
                 <th class="dth">Chip</th>
-                $if view != "clubs":
+                % if view != "clubs":
                     <th class="dth">Club</th>
-                $if view != "classes":
+                % endif
+                % if view != "classes":
                     <th class="dth">Class</th>
-                $if event is not None:
-                    $for field in event.fields:
-                        <th class="dth">$field</th>
+                % endif
+                % if event is not None:
+                    % for field in event.fields:
+                        <th class="dth">${field}</th>
+                    % endfor
+                % endif
                 <th class="dth">Start</th>
                 <th class="dth">Time</th>
                 <th class="dth">Status</th>
             </tr>
         </thead>
         <tbody>
-            $ t = {"entries": "Entries", "classes": "Unassigned results", "clubs": "Individuals/No club", "states": "Unassigned results"}
-            $for group_name, entries in view_entries_list:
-                $if entries:
-                    $ name = group_name if group_name is not None else t[view]
-                    $ name = name + "&nbsp;&nbsp;(" + str(len(entries)) + ")"
+            % for group_name, entries in view_entries_list:
+                % if entries:
                     <tr class="dte h1">
-                        <th class="dte h1" colspan="99">$:name</th>
+                        <th class="dte h1" colspan="99">${group_name if group_name is not None else t[view]}&nbsp;&nbsp;(${len(entries)})</th>
                     </tr>
-                    $for entry in entries:
-                        <tr class="dte" id="$entry.id">
-                            <td class="dte" style="text-align: center;">$('X' if entry.not_competing else '')</td>
-                            <td class="dte">$f(entry.first_name)</td>
-                            <td class="dte" id="entr_table_lastname">$f(entry.last_name)</td>
-                            <td class="dte">$f(entry.gender)</td>
-                            <td class="dte">$f(entry.year)</td>
-                            <td class="dte" style="text-align:right;">$format_card(entry.chip)</td>
-                            $if view != "clubs":
-                                <td class="dte">$f(entry.club_name)</td>
-                            $if view != "classes":
-                                <td class="dte">$f(entry.class_name)</td>
-                            $if event is not None:
-                                $for i in range(len(event.fields)):
-                                    <td class="dte">$entry.fields.get(i, '')</td>
-                            <td class="dte" style="text-align:right;">$(format_date(entry.start.start_time))</td>
-                            <td class="dte" style="text-align:right;">$(format_time(entry.result.extensions.get('running_time', entry.result.time)))</td>
-                            <td class="dte">$MAP_STATUS[entry.result.status]</td>
+                    % for entry in entries:
+                        <tr class="dte" id="${entry.id}">
+                            <td class="dte" style="text-align: center;">${"X" if entry.not_competing else ""}</td>
+                            <td class="dte">${entry.first_name}</td>
+                            <td class="dte" id="entr_table_lastname">${entry.last_name}</td>
+                            <td class="dte">${entry.gender}</td>
+                            <td class="dte">${entry.year}</td>
+                            <td class="dte" style="text-align:right;">${format_card(entry.chip)}</td>
+                            % if view != "clubs":
+                                <td class="dte">${entry.club_name}</td>
+                            % endif
+                            % if view != "classes":
+                                <td class="dte">${entry.class_name}</td>
+                            % endif
+                            % if event is not None:
+                                % for i in range(len(event.fields)):
+                                    <td class="dte">${entry.fields.get(i, "")}</td>
+                                % endfor
+                            % endif
+                            <td class="dte" style="text-align:right;">${format_time(entry.start.start_time)}</td>
+                            <td class="dte" style="text-align:right;">${minutes_seconds(entry.result.extensions.get("running_time", entry.result.time))}</td>
+                            <td class="dte">${MAP_STATUS[entry.result.status]}</td>
                         </tr>
+                    % endfor
+                % endif
+            % endfor
         </tbody>
     </table>
 </div>
