--- a/ooresults/templates/results_table.html
+++ b/ooresults/templates/results_table.html
@@ -1,69 +1,77 @@
-$def with (event, class_results)
+## event: EventType
+## class_results:  List[Tuple[ClassInfoType, List[RankedEntryType]]]
 
 
-$def format_rank(rank, not_competing: bool) -> str:
-    $if rank is not None:
-        $return str(rank)
-    $elif not_competing:
-        $return 'NC'
-    $else:
-        $return ''
+<%!
+from typing import List
+
+from ooresults.otypes.entry_type import RankedEntryType
+from ooresults.otypes.result_type import ResultStatus
+from ooresults.utils.globals import build_columns
+from ooresults.utils.globals import MAP_STATUS
+from ooresults.utils.globals import minutes_seconds
 
 
-$def format_time(time: int, status: ResultStatus) -> str:
-    $if status == ResultStatus.OK and time is not None:
-        $return minutes_seconds(time)
-    $else:
-        $return ''
+def format_rank(rank, not_competing: bool) -> str:
+    if rank is not None:
+        return str(rank)
+    elif not_competing:
+        return "NC"
+    else:
+        return ""
 
 
-$def format_points(points: float, status: ResultStatus) -> str:
-    $if status == ResultStatus.OK and points is not None:
-        $return '{:.2f}'.format(points)
-    $else:
-        $return ''
+def format_time(time: int, status: ResultStatus) -> str:
+    if status == ResultStatus.OK and time is not None:
+        return minutes_seconds(time)
+    else:
+        return ""
 
 
-$def format_time_total(time: int, status: ResultStatus, start_time=None) -> str:
-    $if status == ResultStatus.OK:
-        $return minutes_seconds(time)
-    $elif status == ResultStatus.INACTIVE and start_time is not None:
-        $return 'Start at ' + start_time.strftime('%H:%M:%S')
-    $else:
-        $return MAP_STATUS[status]
+def format_points(points: float, status: ResultStatus) -> str:
+    if status == ResultStatus.OK and points is not None:
+        return "{:.2f}".format(points)
+    else:
+        return ""
 
 
-$def format_points_total(points: float, status: ResultStatus, start_time=None) -> str:
-    $if status == ResultStatus.OK:
-        $return '{:.2f}'.format(points)
-    $elif status == ResultStatus.INACTIVE and start_time is not None:
-        $return 'Start at ' + start_time.strftime('%H:%M:%S')
-    $else:
-        $return MAP_STATUS[status]
+def format_time_total(time: int, status: ResultStatus, start_time=None) -> str:
+    if status == ResultStatus.OK:
+        return minutes_seconds(time)
+    elif status == ResultStatus.INACTIVE and start_time is not None:
+        return "Start at " + start_time.strftime("%H:%M:%S")
+    else:
+        return MAP_STATUS[status]
 
 
-$def voided_legs(ranked_results):
-    $if ranked_results and ranked_results[0].entry.result is not None:
-        $ voided_legs = ranked_results[0].entry.result.voided_legs()
-        $if voided_legs:
-            $return ' (Voided legs: ' + ', '.join(voided_legs) + ')'
-        $else:
-            $return ''
+def format_points_total(points: float, status: ResultStatus, start_time=None) -> str:
+    if status == ResultStatus.OK:
+        return "{:.2f}".format(points)
+    elif status == ResultStatus.INACTIVE and start_time is not None:
+        return "Start at " + start_time.strftime("%H:%M:%S")
+    else:
+        return MAP_STATUS[status]
 
 
-$def f(value) -> str:
-    $return value if value is not None else ''
-
+def voided_legs(ranked_results: List[RankedEntryType]) -> str:
+    if ranked_results and ranked_results[0].entry.result is not None:
+        voided_legs = ranked_results[0].entry.result.voided_legs()
+        if voided_legs:
+            return " (Voided legs: " + ", ".join(voided_legs) + ")"
+        else:
+            return ""
+    return ""
+%>
 
 <div id="res.event">
     <table style="text-align: left">
         <tr>
             <th style="padding-right: 10px">Event name:</th>
-            <td>$(event.name if event is not None else '')</td>
+            <td>${event.name if event is not None else ""}</td>
         </tr>
         <tr>
             <th style="padding-right: 10px">Event date:</th>
-            <td>$(event.date.isoformat() if event is not None else '')</td>
+            <td>${event.date.isoformat() if event is not None else ""}</td>
         </tr>
     </table>
 </div>
@@ -72,64 +80,79 @@ $def f(value) -> str:
 <div id="res.result">
 
 <table style="border-collapse: collapse">
-$ columns = build_columns(class_results=class_results)
+<%
+    columns = build_columns(class_results=class_results)
+%>
 
-$for class_, ranked_results in class_results:
-    $if not ranked_results:
-        $continue
-
+% for class_, ranked_results in class_results:
+    % if ranked_results:
     <thead>
-        <tr><th colspan="4" style="text-align:left;padding-top:3em"><h3>$class_.name$voided_legs(ranked_results)</h3></th></tr>
+        <tr><th colspan="4" style="text-align:left;padding-top:3em"><h3>${class_.name}${voided_legs(ranked_results)}</h3></th></tr>
         <tr class="dt">
             <th class="dt">Rank</th>
             <th class="dt">Name</th>
             <th class="dt">Club</th>
-            $if not columns:
+            % if not columns:
                 <th class="dt">Time</th>
-            $else:
-                $if 'factor' in columns:
+            % else:
+                % if "factor" in columns:
                     <th class="dt">Handicap</th>
-                $if class_.params.otype == 'score':
+                % endif
+                % if class_.params.otype == "score":
                     <th class="dt">Run time</th>
                     <th class="dt">Score controls</th>
                     <th class="dt">Score overtime</th>
                     <th class="dt">Total score</th>
-                $else:
+                % else:
                     <th class="dt">Run time</th>
-                    $if 'penalties_controls' in columns:
+                    % if "penalties_controls" in columns:
                         <th class="dt">Penalty controls</th>
-                    $if 'penalties_overtime' in columns:
+                    % endif
+                    % if "penalties_overtime" in columns:
                         <th class="dt">Penalty overtime</th>
+                    % endif
                     <th class="dt">Total time</th>
+                % endif
+            % endif
         </tr>
     </thead>
     <tbody>
-    $for ranked_result in ranked_results:
-        $ entry = ranked_result.entry
-        $ result = entry.result
+    % for ranked_result in ranked_results:
+        <%
+        entry = ranked_result.entry
+        result = entry.result
+        %>
         <tr class="dt">
-            <td class="dt">$format_rank(ranked_result.rank, entry.not_competing)</td>
-            <td class="dt">$f(entry.first_name) $f(entry.last_name)</td>
-            <td class="dt">$f(entry.club_name)</td>
-            $if not columns:
-                <td class="dt" style="text-align:right">$format_time_total(result.time, result.status, entry.start.start_time)</td>
-            $else:
-                $if 'factor' in columns:
-                    <td class="dt" style="text-align:right">$'{:1.4f}'.format(result.extensions.get('factor', 1))</td>
-                $if class_.params.otype == 'score':
-                     <td class="dt" style="text-align:right">$format_time(result.time, result.status)</td>
-                     <td class="dt" style="text-align:right">$format_points(result.extensions.get('score_controls', None), result.status)</td>
-                     <td class="dt" style="text-align:right">$format_points(result.extensions.get('score_overtime', None), result.status)</td>
-                     <td class="dt" style="text-align:right">$format_points_total(result.extensions.get('score', None), result.status, entry.start.start_time)</td>
-                $else:
-                    <td class="dt" style="text-align:right">$format_time(result.extensions.get('running_time', None), result.status)</td>
-                    $if 'penalties_controls' in columns:
-                        <td class="dt" style="text-align:right">$format_time(result.extensions.get('penalties_controls', None), result.status)</td>
-                    $if 'penalties_overtime' in columns:
-                        <td class="dt" style="text-align:right">$format_time(result.extensions.get('penalties_overtime', None), result.status)</td>
-                    <td class="dt" style="text-align:right">$format_time_total(result.time, result.status, entry.start.start_time)</td>
+            <td class="dt">${format_rank(ranked_result.rank, entry.not_competing)}</td>
+            <td class="dt">${entry.first_name} ${entry.last_name}</td>
+            <td class="dt">${entry.club_name}</td>
+            % if not columns:
+                <td class="dt" style="text-align:right">${format_time_total(result.time, result.status, entry.start.start_time)}</td>
+            % else:
+                % if "factor" in columns:
+                    <td class="dt" style="text-align:right">${"{:1.4f}".format(result.extensions.get("factor", 1))}</td>
+                % endif
+                % if class_.params.otype == "score":
+                     <td class="dt" style="text-align:right">${format_time(result.time, result.status)}</td>
+                     <td class="dt" style="text-align:right">${format_points(result.extensions.get("score_controls", None), result.status)}</td>
+                     <td class="dt" style="text-align:right">${format_points(result.extensions.get("score_overtime", None), result.status)}</td>
+                     <td class="dt" style="text-align:right">${format_points_total(result.extensions.get("score", None), result.status, entry.start.start_time)}</td>
+                % else:
+                    <td class="dt" style="text-align:right">${format_time(result.extensions.get("running_time", None), result.status)}</td>
+                    % if "penalties_controls" in columns:
+                        <td class="dt" style="text-align:right">${format_time(result.extensions.get("penalties_controls", None), result.status)}</td>
+                    % endif
+                    % if "penalties_overtime" in columns:
+                        <td class="dt" style="text-align:right">${format_time(result.extensions.get("penalties_overtime", None), result.status)}</td>
+                    % endif
+                    <td class="dt" style="text-align:right">${format_time_total(result.time, result.status, entry.start.start_time)}</td>
+                % endif
+            % endif
         </tr>
+    % endfor
     </tbody>
+    % endif
+% endfor
 </table>
 </div>
 
