--- a/ooresults/templates/series_tab_content.html
+++ b/ooresults/templates/series_tab_content.html
@@ -1,4 +1,5 @@
-$def with (results)
+## results: str
+
 
 <!-- Tab content -->
 <div id="Series" class="tabcontent">
@@ -11,7 +12,7 @@ $def with (results)
   </div>
 
   <div id="ser.results" class="data">
-    $:results
+    ${results | n}
   </div>
 
   <!-- The Modal -->
