--- a/ooresults/templates/series_table.html
+++ b/ooresults/templates/series_table.html
@@ -1,42 +1,43 @@
-$def with (events, results)
-
-$code
-    def format_points(points: float) -> str:
-        if points is not None:
-            return str(points)
-        else:
-            return ''
+## events: List[EventType]
+## results: List[Tuple[str, List[PersonSeriesResult]]]
 
 
 <table style="border-collapse: collapse">
-$for class_name, series_results in results:
+% for class_name, series_results in results:
     <thead>
-        <tr><th colspan="4" style="text-align:left;padding-top:3em"><h3>$class_name</h3></th></tr>
+        <tr><th colspan="4" style="text-align:left;padding-top:3em"><h3>${class_name}</h3></th></tr>
         <tr class="dt">
             <th class="dt">Rank</th>
             <th class="dt">Name</th>
             <th class="dt">Club</th>
             <th class="dt">Points</th>
-            $for e in events:
-                <th class="dt">$e.series</th>
+            % for e in events:
+                <th class="dt">${e.series}</th>
+            % endfor
         </tr>
     </thead>
     <tbody>
-    $for ser_result in series_results:
-        $if ser_result.races:
+    % for ser_result in series_results:
+        % if ser_result.races:
             <tr class="dt">
-                <td class="dt">$(str(ser_result.rank) if ser_result.rank else '')</td>
-                <td class="dt">$ser_result.first_name $ser_result.last_name</td>
-                <td class="dt">$(ser_result.club_name if ser_result.club_name else '')</td>
-                <td class="dt" style="text-align:right">$format_points(ser_result.total_points)</td>
-                $for i in range(len(events)):
-                    $if i in ser_result.races:
-                        $if ser_result.races[i].bonus:
-                            <td class="dt" style="text-align:right">($str(ser_result.races[i].points))</td>
-                        $else:
-                            <td class="dt" style="text-align:right">$str(ser_result.races[i].points)</td>
-                    $else:
+                <td class="dt">${ser_result.rank if ser_result.rank else ""}</td>
+                <td class="dt">${ser_result.first_name} ${ser_result.last_name}</td>
+                <td class="dt">${ser_result.club_name if ser_result.club_name else ""}</td>
+                <td class="dt" style="text-align:right">${ser_result.total_points}</td>
+                % for i in range(len(events)):
+                    % if i in ser_result.races:
+                        % if ser_result.races[i].bonus:
+                            <td class="dt" style="text-align:right">(${ser_result.races[i].points})</td>
+                        % else:
+                            <td class="dt" style="text-align:right">${ser_result.races[i].points}</td>
+                        % endif
+                    % else:
                         <td class="dt" style="text-align:right"></td>
+                    % endif
+                % endfor
             </tr>
+        % endif
+    % endfor
     </tbody>
+% endfor
 </table>
