--- a/ooresults/templates/si/si1_error.html
+++ b/ooresults/templates/si/si1_error.html
@@ -1,11 +1,12 @@
-$def with (message)
+## message: Dict[str, str]
+
 
 <div id="si1.div" class="bgy">
     <div style="height: 37vh;" class="vertical-center">
-        <p class="s2">$message['controlCard']</p>
+        <p class="s2">${message["controlCard"]}</p>
     </div>
     <div style="height: 26vh;" class="vertical-center">
-        <p class="s1">$message.get('error', ' ')</p>
+        <p class="s1">${message.get("error", " ")}</p>
     </div>
     <div style="height: 37vh;" class="vertical-center">
         <p class="s2">Bitte im WKZ melden</p>
